try use delta with Adudu character

--- a/RobocodeSPL_teaching/RobocodeSPL/.project
+++ b/RobocodeSPL_teaching/RobocodeSPL/.project
@@ -58,10 +58,22 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.deltaecore.suite.mapping.resource.demapping.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.deltaecore.core.decore.resource.decore.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>de.ovgu.featureide.core.featureProjectNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>de.tu_bs.cs.isf.deltaj.resource.deltaj.nature</nature>
+		<nature>org.deltaecore.suite.mapping.resource.demapping.nature</nature>
+		<nature>org.deltaecore.core.decore.resource.decore.nature</nature>
 	</natures>
 </projectDescription>
