--- a/RobocodeDeltaJ/.project
+++ b/RobocodeDeltaJ/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Adudu</name>
+	<name>RobocodeDeltaJ</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -29,7 +29,18 @@
 	<natures>
 		<nature>de.tu_bs.cs.isf.deltaj.resource.deltaj.nature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.deltaecore.core.decore.resource.decore.nature</nature>
 		<nature>org.deltaecore.suite.mapping.resource.demapping.nature</nature>
+		<nature>org.deltaecore.core.decore.resource.decore.nature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1740739074749</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
