--- a/RobocodeSPL_teaching/RobocodeSPL/.project
+++ b/RobocodeSPL_teaching/RobocodeSPL/.project
@@ -76,4 +76,15 @@
 		<nature>org.deltaecore.suite.mapping.resource.demapping.nature</nature>
 		<nature>org.deltaecore.core.decore.resource.decore.nature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1741938118010</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
