feat: add deltaj and demapping for HeadOnTargeting, Cornering, WeakestSelectEnemy, MaximumPowerGun, and additional feature Squaring

--- a/ModuleTester/robocodes/r1/config/compiler.properties
+++ b/ModuleTester/robocodes/r1/config/compiler.properties
@@ -1,6 +1,6 @@
 #Robocode Compiler Properties
-#Fri Mar 07 11:11:15 ICT 2025
-compiler.options=
+#Fri Mar 14 23:14:32 ICT 2025
 robocode.version=1.7.3.0
-compiler.classpath=-classpath D\:\\eclipse\\jdk1.8.0_241\\jre/lib/rt.jar;libs\\robocode.jar;D\:\\eclipse\\Robocode\\ModuleTester\\robocodes\\r1\\robots
+compiler.options=
+compiler.classpath=-classpath C\:\\Users\\DarilRaf\\Desktop\\eclipse-featureide\\jdk1.8.0_241\\jre/lib/rt.jar;libs\\robocode.jar;"C\:\\Users\\DarilRaf\\OneDrive\\Semester 6\\SPLE\\Workspace\\Kelompok\\Tugas 2\\robocode-sple\\ModuleTester\\robocodes\\r1\\robots"
 compiler.binary=
